--- a/VRChat/12/1088812.html
+++ b/VRChat/12/1088812.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "lAO2LpVf4kgLbU3M3dNS3s7IEkvoIos+W3C33omz55s="></script>
+    "PecemzO9uxJFZN4txtrvGQTJAoYc6mIX6ETQvTiYikw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"エンゲージリング　婚約指輪　結婚指輪にも","description":"■VRchat等で使用することを想定して作られた指輪です\n\n■ガバが目立ちます\n\n■箱もおまけで付きます\n\n■ポリゴン数：4980\n\n■細かいことVRchat推奨　改造化　商用利用可　\n\n■禁止事項：自作発言（改造品含む）\n\n■二次配布は一度のみ可能です。　意中のあの子にあげましょう（2人以上に渡す場合はBOOTHして頂けると助かります）\n\n※リングの部分が細いとのご指摘を受け、ちびっと太くしました。新旧どちらもご用意しておりますので、お好みでお使いください。","url":"https://booth.pm/ja/items/1088812","offers":{"priceCurrency":"JPY","@type":"Offer","price":"250"},"image":"https://booth.pximg.net/c/620x620/565e6dcd-600c-4884-8a13-2faabbfd8cdf/i/1088812/e9da8c4d-8741-4c39-92b9-bdfe4ed4889c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lAO2LpVf4kgLbU3M3dNS3s7IEkvoIos+W3C33omz55s="></script>
+    nonce="PecemzO9uxJFZN4txtrvGQTJAoYc6mIX6ETQvTiYikw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1088812/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              94
+                              95
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1088812/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              94
+                              95
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
