--- a/VRChat/16/1087916.html
+++ b/VRChat/16/1087916.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YPEKd0TBkjYLCGkIRFDCp5Jm0mhQ3UWiFDBaAw15raw="></script>
+    "cZYL60FOMAgHK3WHffJM3YNjtPfsEnmf3YE4xQyz4Po="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"あっくん大魔王専用杖","description":"VRChat対応アイテム「あっくん大魔王専用杖」\n\n\n動く城のフィオ様より企画されました\nVlend発足　企画第一弾：デザインコンペ\n「もしも！あのVtuberが武器を持ったら？」にて、\nあっくん大魔王様の杖のデザインを担当させて頂きました。\n\nポリゴン数：4950\n\nCubed's unity shader使用\n\nunitypackage：有\n\n\nあっくん大魔王様に撮影のご協力を頂き、\n本商品を手に取ってもらった写真を掲載させて頂いております。\n\nまた、撮影会場はマッスン様の自作アバター交流会の会場をお借りし、撮影させて頂きました。\n\nそして、本商品をマッスン様主催の次回自作アバター交流会にて展示して頂けることになりましたので、是非ご覧ください。\n\nhttps://twitter.com/massun_nico/status/1061542579735453696\n詳細は↑にて。\n\n＜アップデート＞\n2018.11.12\n杖の装飾に使われているルーンの部分が回転し続けるアニメーションを追加しました。\n\n導入方法については添付の画像をご参照をお願いします。\n（杖アニメ導入方法.png）\n","url":"https://booth.pm/ja/items/1087916","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/a2bf9907-a323-492b-a7ce-a665215736f7/i/1087916/fb5e9489-e0aa-4923-b6fa-f1c2aaedffa7_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YPEKd0TBkjYLCGkIRFDCp5Jm0mhQ3UWiFDBaAw15raw="></script>
+    nonce="cZYL60FOMAgHK3WHffJM3YNjtPfsEnmf3YE4xQyz4Po="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1087916/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1087916/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               25
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
