--- a/VRChat/67/1067567.html
+++ b/VRChat/67/1067567.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "24vVSnYwsN/6cZiSn1tGOalb+JdicQhrWbHdPr70l7A="></script>
+    "G47jW6C3kggTAs/bpX0PaORg0sDjPTUmfF1Iv8bLRlc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【Vlend】特殊液体金属刃式携帯切断装置 LMS model-212","description":"コラボ専門3Dモデルブランド「Vlend」\n第一段「もしも！あのVtuberが武器を持ったら？」において提示されたVT-212/ニーツちゃんのお題「ゴタゴタとした機械部分を極力排除した、洗練されたデザインの近未来チェーンソー」に沿って制作を行ったモデルです。\n\n","url":"https://booth.pm/ja/items/1067567","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/9e316222-2e53-4586-9471-58ac96f0baec/i/1067567/85ba183c-de98-4e68-b86d-f74768f9e980_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="24vVSnYwsN/6cZiSn1tGOalb+JdicQhrWbHdPr70l7A="></script>
+    nonce="G47jW6C3kggTAs/bpX0PaORg0sDjPTUmfF1Iv8bLRlc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,7 +186,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1067567/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               62
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1067567/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               62
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
