--- a/VRChat/66/1087966.html
+++ b/VRChat/66/1087966.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "50sTU/TrLfEQqKx5sfNJ3nIq9lryJLFYaiIbB+L9rT8="></script>
+    "Iv6j83vKXpc/qOGPGvZl3lMy6Vna35wDhwfw9CLMHL0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"チョコレート棒 3Dモデル","description":"チョコレート棒 3Dモデルの紹介\n\n\n本モデルは【VRChat】向けに作成したチョコレート棒です。\n\n11/11にはぜひ使っていただけたら嬉しく思います♪\n皆でチョコレート棒ゲーム(語呂悪い)をしましょう♪♪\n\n※チョコレート棒ゲームとは、\nチョコレート棒の両端から咥えて口と口が触れ合うギリギリを攻めるゲームです。\n唇が触れ合ってしまったら即カップルに指定されます。\n(間違ってもベ〇スマンとはしないようにしましょう)\n\n●内容物\n\n・Chocolate-Sticks.unitypackage\n・FBXデータ,Blenderファイル\n・画像\n・Readme\n\n\n------------------------------\n\n●利用条件\n\n・本モデルの営利利用目的は可\n・本モデルの改変は可\n\n\n●免責事項\n\n・本データを使用し、何れかの不都合が生じたとしても当方は責任を負いかねますのでご了承ください。\n\n\n■禁止事項\n\n・公序良俗に反する行為、政治・宗教活動、誹謗中傷目的での使用\n\n------------------------------\n\n貧相なモデルですが使っていただければ嬉しく思います。\n\n何かあれば下記までご連絡ください。\nTwitter:ケーキ@VRChatter(@keiki002)\nhttps://twitter.com/keiki002","url":"https://booth.pm/ja/items/1087966","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/266c358f-8e7e-41bc-bd4e-a1da54b572e7/i/1087966/3bcb2164-3449-4051-b0b6-2e8abcb401e3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="50sTU/TrLfEQqKx5sfNJ3nIq9lryJLFYaiIbB+L9rT8="></script>
+    nonce="Iv6j83vKXpc/qOGPGvZl3lMy6Vna35wDhwfw9CLMHL0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1087966/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               23
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1087966/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               23
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
