--- a/VRChat/38/1087938.html
+++ b/VRChat/38/1087938.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "oQVmDWgWXYOKV8lvWY35lFGF6i46qhYfQR0yQWE+hkA="></script>
+    "aSDASqDv+AMbmUaT/7CVudaXsCMQIvy3CBxFHBL/hdg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat推奨】ペンギンモデル","description":"VRChatでの使用を想定したペンギンの3Dモデルです。\n\n～導入方法～\n１.データをダウンロード\n２.Unityにペンギン.unitypackageをインポート\n３.プロジェクトからペンギンをHieratchyにドラッグ\n４．アップロードして終わり\n\nポリゴン数：640(Poly)\nリップシンク対応\n","url":"https://booth.pm/ja/items/1087938","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/43cf9412-f2b9-411c-9546-f23a7355aa0a/i/1087938/66700727-463a-48c6-ad21-f8d77146d1b7_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="oQVmDWgWXYOKV8lvWY35lFGF6i46qhYfQR0yQWE+hkA="></script>
+    nonce="aSDASqDv+AMbmUaT/7CVudaXsCMQIvy3CBxFHBL/hdg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1087938/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               681
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1087938/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               681
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
