--- a/VRChat/16/1087216.html
+++ b/VRChat/16/1087216.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bHd9wQpagGBEuyrfF9FMn6iiBu4XmqobCgkxneSs45w="></script>
+    "I25uHN/TTaqVh38FdTLg5QB1XJ7Qf8my2sTL2PrKD8M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用　焼き芋　414ポリゴン","description":"VRChat用の焼き芋です。新聞紙付き、ナシの2種類の.fbxモデルと湯気パーティクル付きのモデル2種のPrefabが入っています。\n\nまんまるしぇーだー1.3をお借りして同梱しています。すでに導入済みの方、他のシェーダーを利用される方はチェックを外してインポートしてください。\n\nモデルの再配布を禁止します。テクスチャの改変と、改変したテクスチャの配布は許可します。\n\nご質問、確認などありましたらリンク先のTwitterアカウントまでお知らせください。","url":"https://booth.pm/ja/items/1087216","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/64582e23-a174-480f-b05b-2d9908644c7b/i/1087216/782c2d28-a7f3-494c-8c72-6683023b1fee_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bHd9wQpagGBEuyrfF9FMn6iiBu4XmqobCgkxneSs45w="></script>
+    nonce="I25uHN/TTaqVh38FdTLg5QB1XJ7Qf8my2sTL2PrKD8M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1087216/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              92
+                              93
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1087216/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              92
+                              93
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
