--- a/VRChat/48/1086848.html
+++ b/VRChat/48/1086848.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "djSUraJhWxDCuMO18QYBDY0KbguVfIQGbQsXdeRc5aU="></script>
+    "LpdAVifxB65O6ooOQy+sHXOif6YZVznWO5MUHnkwfwU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC向けオリジナル3Dモデル『シエラレオネ/VT-232』","description":"VRC向けのオリジナルアバターです。\nDynamicBoneとユニティちゃんトゥーンシェーダー2.0に対応しています。\n\n※予めUnityプロジェクトにVRCSDK、及びDynamicBone(任意)をインポートした状態でunitypackageをインポートしてください。\n\nポリゴン数(三角面)：19999\nマテリアル数：10\n\n【Ver1.0.1】\n本来透過するオブジェクトが透過していなかったのでマテリアルを増やして修正しました。\n\n【注意】無料版と有料版でアバターの中身は一切は変わりません。たけのこ公国に対して金銭的支援をしたい方のみ有料版をご購入ください。\n\n\n\n本データはVRCでの利用を想定しております。VRC以外での利用は禁止しませんが、本データを利用したことによって生じるいかなる損害に対して当方は一切責任を負いません。\n以下の規約に従った上で、ご自由にお使いください。\n\n◆禁止事項\n・自作発言等、作者を偽る発言はおやめください。\n・シエラレオネ/VT-232というモデル/名称を使いを架空のキャラクターとして公の場で活動させる行為(バーチャルYouTuber活動)は禁止です。ただし、十分独自性があると認められるほど改変したモデルはその限りではありません。\n\n◆やってもいいことの一例\n・データの改変\n・営利利用\n・映像制作\n・動画配信\n\n◆補足\n本データにはユニティちゃんトゥーンシェーダーが含まれております。\n© Unity Technologies Japan/UCL","url":"https://booth.pm/ja/items/1086848","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/22623f29-cbf4-42f5-96e7-40d523e8e6fe/i/1086848/63309e7c-f218-4d8f-ad25-758b6e61b4b0_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="djSUraJhWxDCuMO18QYBDY0KbguVfIQGbQsXdeRc5aU="></script>
+    nonce="LpdAVifxB65O6ooOQy+sHXOif6YZVznWO5MUHnkwfwU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1086848/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               80
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1086848/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               80
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
