--- a/VRChat/32/1086732.html
+++ b/VRChat/32/1086732.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "SONke/jqhcbegDwP8lXAlL9DwyumFIPMZSdIBFpylHw="></script>
+    "UcRlfEDMtkmqI6/Oagpn7JxgMVFUpItNWmQEjR8OBd4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"キャンディー【3Dモデルデータ】","description":"棒付きキャンディーの3Dモデルデータです。\nテクスチャのpsdファイルと5種類の色違いデータを同梱しています。VRchatでの使用を想定して作りましたがMMD等他のソフトでもご利用いただけます。\n\n\ncandy.obj(Δ864)\n","url":"https://booth.pm/ja/items/1086732","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e1de58a1-2cce-44e8-acd7-784faaded619/i/1086732/1fdbdb77-a84e-4ea7-8ba6-f26281e7642a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="SONke/jqhcbegDwP8lXAlL9DwyumFIPMZSdIBFpylHw="></script>
+    nonce="UcRlfEDMtkmqI6/Oagpn7JxgMVFUpItNWmQEjR8OBd4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1086732/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               799
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1086732/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               799
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
